syntax = "proto3";

package proto;

import "base.proto";
import "im.proto";


service Logic {
	rpc Auth (AuthReq) returns (EmptyReply) {
	}

	rpc Operate (OperateReq) returns (EmptyReply) {
	}
}


message AuthReq {
	int64 Id = 1;
	string ServerId = 2;
	string Password = 3;
}

message AuthReply {

}

message OperateReq {
	Proto proto = 1;
}